--- a/LabFive/styles.css
+++ b/LabFive/styles.css
@@ -21,6 +21,7 @@ header>nav>a {
     text-decoration: none;
     padding: 1rem;
     border: 1px solid transparent;
+    display: inline-block;
     /*Missing display:inline-block;*/
 }
 header>nav {
