--- a/LabSeven/styles.css
+++ b/LabSeven/styles.css
@@ -11,6 +11,7 @@ header {
     background-image:url(images/trees.png);
     background-repeat: no-repeat;
     background-position: center;
+    /*Missing background-size:cover;*/
 }
 h1 {
     display: none;
@@ -36,7 +37,7 @@ nav>a:hover {
 header {
     display:flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: flex-end;/*Justify content should be center*/
 
 }
 nav {
