--- a/LabEighteen/stylesheet.css
+++ b/LabEighteen/stylesheet.css
@@ -1,14 +1,34 @@
+header {
+    background-image: url(Images/walls.jpg);
+    background-size: auto;
+}
+.hdr{
+    transition-property: transform;
+    transition-duration:.5s;
+    transition-timing-function:ease-in;
+    transition-delay: none;
+    border: darkgoldenrod;
+}
+.hdr:hover {
+    transform: translateY(-10px);
+}
 section {
     column-count: 2;
     column-width: 33% 67%;
+    column-rule: 3px solid white;
+    column-gap: 1.5rem;
 }
 footer {
     column-count: 3;
+    column-width: 33% 33% 33%;
+    column-rule: 3px solid white;
+    column-gap: 1.5rem;
 }
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: black;
     color :darkgoldenrod;
+    margin: 5px;
 }
 nav a {
     float: none;
@@ -25,20 +45,20 @@ nav a:hover {
 header {
     text-align: center;
 }
-.icon:hover {
-    animation-name: circle;
-    animation-duration: 3s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-fill-mode: none;
-    animation-play-state: running;
+
+@keyframes slide {
+    from {
+        transform:translateX(-300px);
+    }
+    to { 
+        transform:translateX(300px);
+    }
 }
-@keyframes circle {
-    from{
-        rotate:(0deg);
-    }
-    To{ 
-        rotate:(180deg);
-    }
+.icon {
+    animation-name: slide;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: none;
 }
