--- a/LabNineteen/stylesheet.css
+++ b/LabNineteen/stylesheet.css
@@ -7,7 +7,11 @@ body {
 h2 {
     color: #f9545b;
 }
-section {
+.about {
+    background-color: white;
+    padding: 5rem;
+}
+.hours {
     background-color: white;
     padding: 5rem;
 }
@@ -15,5 +19,8 @@ section {
     background-image: url(Images/croissant.jpg);
 }
 nav {
+    font-family: 'Eater', serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #f9545b;
 }
