--- a/LabFourteen/stylesheet.css
+++ b/LabFourteen/stylesheet.css
@@ -66,4 +66,80 @@ section:nth-child(2) {
 }
 section>img {
     max-height: 10rem;
+    grid-column-start:1;
+    grid-column-end:2;
+    grid-row-start:1;
+    grid-row-end:4;
+}
+section>h3 {
+    grid-column-start:2;
+    grid-column-end:3;
+    grid-row-start:1;
+    grid-row-end:2;
+}
+section>h4 {
+    grid-column-start:2;
+    grid-column-end:3;
+    grid-row-start:2;
+    grid-row-end:3;
+}
+section>p {
+    grid-column-start:1;
+    grid-column-end: 3px;
+    grid-row-start:4;
+    grid-row-end:5;
+}
+.ragnarok section:nth-child(5) {
+    display: block;
+}
+@media screen and (min-width: 800px) {
+    main {
+        Display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+    }
+    .title {
+        grid-column: span;
+    }
+    section:nth-child(2) {
+        grid-column: span;
+    }
+    .ragnarok {
+        display: block;
+    }
+    @media screen and (min-width: 1100px){
+    }
+        body {
+        display:grid;
+        grid-template-columns: 20rem auto;
+        grid-template-rows: auto auto;
+       }
+       header {
+        grid-column-start:1;
+        grid-column-end:3;
+        grid-row-start:1;
+        grid-row-end:2;
+       }
+       sidenav {
+        grid-column-start:1;
+        grid-column-end:2;
+        grid-row-start:2;
+        grid-row-end:3;
+       }
+       main {
+        grid-column-start:2;
+        grid-column-end:3;
+        grid-row-start:2;
+        grid-row-end:3;
+       }
+       header {
+        display: flex;
+        justify-content: flex-end;
+       }
+       .sidenav>a {
+        display: block;
+        text-align: right;
+       }
+    
+
 }
