--- a/LabFifteen/stylesheet.css
+++ b/LabFifteen/stylesheet.css
@@ -53,11 +53,10 @@ footer a {
     margin: .25rem;
 }
 section.headline {
-    /*Missing Images/ in the url. */
-    background-image: url(cafe.png);
+    background-image: url(Images/cafe.png);
     background-size: cover;
     background-color: rgb(23,0,65);
-    padding: 5rem, 2rem;/*Remove comma*/
+    padding: 5rem 2rem;
     color: #fff;
 }
 .headline h2 {
@@ -210,8 +209,7 @@ form {
 .add-button>span:hover {
     color: #3b325a;
 }
-/*min-width not max-width*/
-@media screen and (max-width: 1000px){
+@media screen and (min-width: 1000px){
      .gallery img {
         max-width: 50vw;
         height: calc(50vw / 1.778);
@@ -225,8 +223,7 @@ form {
         gap: 1rem;
      }
      .about h2 {
-        /*This should be grid-column:1/3;*/
-        grid-template-columns: 2fr 1fr;
+        grid-column: 1/3;
      }
      .about img:nth-child(3) {
         grid-area: 2/2/4/3;
